# osu-bookmarks-api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/database/: database.py  models.py  schemes.py
app/models/: beatmap.py  bookmark.py  collection.py  user.py
app/routers/: beatmaps.py  bookmarks.py  collections.py  users.py
app/schemes/: beatmap.py  collection.py  user.py
app/services/: beatmaps_service.py  bookmarks_service.py  collections_service.py  users_service.py
app/tests/: test_data.py
app/utils/: osu_api.py
